--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -247,6 +247,7 @@
             <a c href="https://vcsxa.egamings.com/wpsites/egamings">Egamings vcsxa</a>
         </section>
         <a href="https://devxatest.egamings.com:23443/static/editor-manual/article-base.html">editor manual SG1</a>
+        <a c b href="https://devxatest.egamings.com:23443/static/zl/zlEpic/appZapp/devlog.html">devXa devlog</a>
 
     </atricle>
 
