--- a/appZapp/__demo/appking-story/line-2.html
+++ b/appZapp/__demo/appking-story/line-2.html
@@ -158,61 +158,86 @@
 
 
 <!-- Легенда короны -->
-<section class="el-scene layer scene-crown-legend" style="position:relative;">
+<section class="el-scene layer scene-crown-legend">
+
+    <header class="zetka-layer crown-legend-header">
+        <h2>Легенда о короне</h2>
+        <p class="subtitle">24500 лет до н.э.</p>
+    </header>
     <div class="zetka-layer textblock-crown-legend">
-        <header class="zetka-layer crown-legend-header">
-            <h2>Легенда о короне</h2>
-            <p class="subtitle">24500 лет до н.э.</p>
-        </header>
-        <p>Было дело, гулял молодой король по тропинкам вокруг вулкана Таупо во время извержения Оруануи. Опасные были прогулки, но король продолжал гулять пока не проверил всё написанное в энциклопедии об этом вулкане.</p>
+        <p>Было дело, гулял молодой король вокруг вулкана Таупо. Из вулкана выливались потоки горячей лавы и струи чёрного пепела вырывались вверх до самого неба. Это извержение в энциклопедии назвали извержением Оруануи. Гулять рядом было опасно, но храбрый король продолжал прогулки пока лично не проверил всё написанное в энциклопедии.</p>
         <div class="zetka-side note">
             <div>
-                Извержение Оруануи — крупнейшее вулканическое извержение за последние 70 тысяч лет,
-                <a class="textlink" href="https://ru.wikipedia.org/wiki/%D0%98%D0%B7%D0%B2%D0%B5%D1%80%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D0%9E%D1%80%D1%83%D0%B0%D0%BD%D1%83%D0%B8"><span>статья в Википедии</span></a> →
+                Извержение Оруануи около Новой Зеландии — самое большое извержение вулкана за последние 70 тысяч лет,
+                <a class="textlink" href="https://ru.wikipedia.org/wiki/%D0%98%D0%B7%D0%B2%D0%B5%D1%80%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D0%9E%D1%80%D1%83%D0%B0%D0%BD%D1%83%D0%B8"><span>статья в Википедии</span></a>&nbsp;→
             </div>
         </div>
         <p>Встретил чёрного орла. Тот был чёрный от мрачных мыслей и шёл прыгать в жерло вулкана. Причиной был недавний спор с дятлом у кого клюв крепче. Дятел предложил испытание и выиграл спор. А орёл во время испытания сломал себе клюв и потерял всякую надежду на счастливую жизнь. Потому что без достойного клюва орлиного счастья не бывает.</p>
         <p>Король выслушал беду и отломал кусок от своей золотой короны. Смастерил из куска новый орлиный клюв. Хороший получился клюв — <nobr>¹) красивый,</nobr> <nobr>²) удобный,</nobr> <nobr>³) прочный.</nobr> Орёл обрадовался и жили они долго и счастливо. Такие дела.</p>
     </div>
+
     <style>
         .scene-crown-legend {
             background-color: white;
             color: black;
+            font-size:   1.2em;
+            position: relative;
+            padding-bottom: 40vh;
         }
+
         .scene-crown-legend,
-        .crown-legend-header {
+        .crown-legend-header,
+        .textblock-crown-legend::after {
             background-image: url(art/illustrations/crown-legend-landscape.jpg);
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-position: 30% 40%;
         }
-        .scene-crown-legend::before {
-            content: '';
-            display: block;
-            background-color: hsl(201, 55%, 12%); /* Funny Like the Space */
-            clip-path: polygon( 0 -1px, 100% -1px, 100% 0.5em, 75% 3em, 36% 0.5em, 10% 2em, 0 0.5em );
-            height: 3em;
-            margin-bottom: calc( 80vh - 3em );
-        }
+
         .crown-legend-header {
-            grid-row-gap:   0;
-            padding-top: 2em;
-            padding-bottom: 1.5em;
-            margin-bottom:  20vh;
-            clip-path: polygon( 0 0, 100% 0, 100% 100%, 55% calc( 100% - 2em ), 36% 100%, 10% calc( 100% - 1em ), 0 100% );
-            position: sticky;
-            top: -2em;
+            /* has text content */
+            grid-row-gap: 0;
             color: black;
             text-shadow: 2px 2px 0 white;
+            /* is shaped */
+            clip-path: polygon( 0 0, 100% 0, 100% 100%, 55% calc( 100% - 2em ), 36% 100%, 10% calc( 100% - 1em ), 0 100% );
+            padding-bottom: 1.5em;
+            margin-bottom: -2em;
         }
+        .scene-crown-legend .crown-legend-header {
+            /* has vertical screen space */
+            padding-top: 80vh;
+            /* is sticky */
+            position: sticky;
+            top: -80vh;
+        }
+        .scene-crown-legend .crown-legend-header::before {
+            content: '';
+            display: block;
+            grid-column: full;
+            position: absolute;
+            top:    0;
+            left:   0;
+            right:  0;
+            height: 3em;
+            /* is shaped */
+            background-color: hsla(201, 55%, 12%, 1); /* Funny Like the Space */
+            clip-path: polygon( 0 -1px, 100% -1px, 100% 0.5em, 75% 3em, 36% 0.5em, 10% 2em, 0 0.5em );
+        }
+        .textblock-crown-legend::after {
+            content: '';
+            display: block;
+            grid-column: full;
+            height:     40vh;
+            margin-bottom: -2em;
+            /* is shaped */
+            clip-path: polygon( 0 2em, 10% 1em, 36% 2em, 55% 0, 100% 2em, 100% 101%, 0 101% );
+        }
+
         .textblock-crown-legend {
-            background-color: hsla(222,54%,12%,0.9);
+            background-color: hsla(201, 55%, 12%, 0.8); /* Funny Like the Space */
             color: white;
-            padding-bottom: 20vh;
-            font-size: 1.2em;
-        }
-        .textblock-crown-legend>*:last-child {
-            padding-bottom: 20vh;
+            padding-top: calc( 30vh + 2em );
         }
         .textblock-crown-legend>*:not(header)::first-letter {
             font-size:   2em;
@@ -233,16 +258,262 @@
 </section>
 
 
+<!-- Описание мира -->
+<section class="el-scene zetka-layer scene-about-this-world">
+    <header class="zetka-layer crown-legend-header">
+        <h2>Описание мира</h2>
+        <p class="subtitle">Наши дни</p>
+    </header>
+    <figure class="zetka-menu character-appking-in-this-world">
+        <img src="art/characters/appking-welcome.svg" alt="App King is Content lover">
+    </figure>
+
+    <div class="zetka-layer textblock-about-this-world">
+        <p>Конечно же, одной короны недостаточно, чтобы быть королём и управлять подданными. Для управления король Апп пользуется правилами, которые сам же и придумывает.</p>
+        <header class="zetka-layer caption">
+            <h3>Зачем нужны правила?</h3>
+        </header>
+        <p>Во-первых, чтобы все понимали друг-друга одинаково. Предположим, один енот рисовал палочки считая припасы собранные для похода на Галлию:</p>
+        <figure><div>IIIII IIIII IIIII II</div></figure>
+        <p>Чтобы записи не были длинными, енот заменял пять подряд идущих палочек на символ V, а вместо десяти палочек рисовал X</p>
+        <figure><div>XVII</div></figure>
+
+        <div style="position:relative">
+            <figure><img src="art/characters/bergamot-just-browse-here.svg" alt="Bergamot the Cat just browse"></figure>
+        </div>
+
+        <p>Соседи енота таким же способом подсчитывали свои запасы, после чего собирались на ежегодную ярмарку хвастовства «Мой запас больше твоего». На ярмарке записанные разными способами числа сравнивали.</p>
+        <figure>
+            <div>VIXI</div>
+            <div>VIVIV</div>
+            <div>IIVIIIVII</div>
+            <div>IIIIXIII</div>
+        </figure>
+        <p>Сложно с первого взгляда сказать равны ли эти числа. Сравнивая каждую пару, требуется заново заниматься пересчётами, проверяя соответствие палочек. Поэтому король Апп, проходя мимо ярмарки, придумал два правила:</p>
+
+        <ol>
+            <li>Записывать символы слева направо в порядке убывания величины</li>
+            <li>Складывать символы в более крупные, начиная слева направо</li>
+        </ol>
+        <figure>
+            <div>IIVIIIVII → ¹) VVIIIIIII → ²) XVII</div>
+        </figure>
+
+
+
+        <p>Выполнение правил позволило быстрее сравнивать числа.</p>
+        <figure>
+            <div>XXII</div>
+            <div>XVIII</div>
+            <div>XXVI</div>
+            <div>XXX</div>
+        </figure>
+        <p>Во-вторых, правило может быть универсальным и помогать в других случаях.</p>
+        <p>Когда на ярмарке не сравнивали, а складывали запасы, то складывали рядом числа и применяли те же правила:</p>
+        <figure>
+            <div>записали рядом:</div>
+            <div>VII+VIII+XII → VIIVIIIXII</div>
+            <div>¹) переставили в порядке убывания:</div>
+            <div>XVVIIIIIII</div>
+            <div>²) сложили символы, которые складываются:</div>
+            <div>XXVII</div>
+        </figure>
+        <p>Универсальность избавляет от необходимости придумывать правила для каждого случая. Случаев может быть много, и вместо огромного количества уникальных правил легче пользоваться небольшим списоком универсальных правил.</p>
+        <p>Король Апп каждый день придумывает универсальные правила.</p>
+
+
+
+        <div class="zetka-layer matrix-code-layer">
+        <figure class="zetka-menu character-appking-in-this-world">
+            <img src="art/characters/appking-welcome-matrix-layer.svg" alt="App King is Content lover">
+        </figure>
+            <div class="matrix-code">
+                <p>&lt;P&gt;</p>
+                <p class="span1">Соседи енота таким же способом подсчитывали свои запасы, после чего собирались на ежегодную ярмарку хвастовства «Мой запас больше твоего». На ярмарке записанные разными способами числа сравнивали.</p>
+                <p>&lt;/P&gt;</p>
+                <p>&lt;UL&gt;</p>
+                <p class="span1">&lt;LI&gt; VIXI</p>
+                <p class="span1">&lt;LI&gt; VIVIV</p>
+                <p class="span1">&lt;LI&gt; IIVIIIVII</p>
+                <p class="span1">&lt;LI&gt; IIIIXIII</p>
+                <p>&lt;/UL&gt;</p>
+            </div>
+            <p>&lt;p&gt;</p>
+            <p>Соседи енота таким же способом подсчитывали свои запасы, после чего собирались на ежегодную ярмарку хвастовства «Мой запас больше твоего». На ярмарке записанные разными способами числа сравнивали.</p>
+            <p>&lt;/p&gt;</p>
+        </div>
+
+        <figure>
+            <div>VIXI</div>
+            <div>VIVIV</div>
+            <div>IIVIIIVII</div>
+            <div>IIIIXIII</div>
+        </figure>
+        <p>Сложно с первого взгляда сказать равны ли эти числа. Сравнивая каждую пару, требуется заново заниматься пересчётами, проверяя соответствие палочек. Поэтому король Апп, проходя мимо ярмарки, придумал два правила:</p>
+
+        <ol>
+            <li>Записывать символы слева направо в порядке убывания величины</li>
+            <li>Складывать символы в более крупные, начиная слева направо</li>
+        </ol>
+        <figure>
+            <div>IIVIIIVII → ¹) VVIIIIIII → ²) XVII</div>
+        </figure>
+
+    </div>
+
+    <style>
+        .scene-about-this-world {
+            background-color: hsla(201, 55%, 12%, 1); /* Funny Like the Space */
+            color: white;
+            font-size: 1.2em;
+
+
+            min-height: 200vh;
+        }
+        .character-appking-in-this-world {
+            position: relative;
+        }
+        .character-appking-in-this-world img {
+            position: absolute;
+            top: -22vw;
+            left: 0;
+            right: 0;
+            height: auto;
+        }
+        @media (min-width:700px) {
+            .character-appking-in-this-world {
+                position: sticky;
+                top: 24vw;
+            }
+        }
+        .scene-about-this-world .crown-legend-header {
+            position: relative;
+            position: sticky;
+            top: 0;
+        }
+        .scene-about-this-world .crown-legend-header::before {
+            content: '';
+            pointer-events: none;
+            position: absolute;
+            z-index: -1;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: transparent;
+            transition: background 400ms ease-out;
+        }
+
+        /* on top state */
+        .scene-about-this-world.is-on-top .crown-legend-header {
+            text-shadow: none;
+        }
+        .scene-about-this-world.is-on-top .crown-legend-header::before {
+            background-color: hsl(155, 31%, 62%); /* appking blue */
+            background-color: hsla(201, 35%, 72%, 1); /* Funny Like the Space */
+        }
+
+        .textblock-about-this-world {
+            padding-top: 20vh;
+            color: rgba(255,255,255,0.05);
+        }
+        .matrix-code-layer {
+            background-color: black;
+            background-color: hsla(201, 65%, 6%, 1); /* Funny Like the Space */
+            color: limegreen;
+            padding: 10vh 0;
+            margin-top: 2em;
+            /* is full shaped */
+            /*clip-path: polygon( 0 2em, 10% 1em, 36% 2em, 55% 0, 100% 2em, 100% 100%, 55% calc( 100% - 2em ), 36% 100%, 10% calc( 100% - 1em ), 0 100% );*/
+        }
+        .matrix-code .span1 {
+            padding-left: 1em;
+        }
+
+    </style>
+    <script>
+        ChapterAction.push((o)=>{
+            let scene = document.querySelector('.scene-about-this-world')
+            let doThisWorldHeader = new Waypoint({
+                element: scene,
+                handler: function showCrownLegendStory (direction) {
+                    let    addClass = direction == 'down' ? 'is-on-top' : false
+                    let removeClass = direction == 'up'   ? 'is-on-top' : false
+                    console.log(direction)
+                    app.mutate({ el: scene, addClass, removeClass })
+                }
+            })
+        })
+    </script>
+</section>
+
+<!-- Известный ценитель содержания -->
+<section class="el-scene zetka-layer scene-appking-is-content-lover">
+    <div class="zetka-layer textblock-about-content">
+        <p>Король Апп известный ценитель содержания.</p>
+        <p>Содержание? Конечно знаю, дома мы назваем его <abbr title="термин: content">контент</abbr>, там он растёт под светом идей и даже дети умеют собирать контент.<br><br> Содержание — это то, что повествуется, излагается, изображается как-либо…</p>
+        <p>Король Апп не любит исчезать с экрана во время прокрутки. Там за краем экрана темно и скучно. Поэтому король из всех возможных позиций предпочитает <abbr title="position: fixed">фиксированную</abbr>, что даёт ему право оставаться в углу экрана.</p>
+        <p>Отсюда очень удобно наблюдать как неведомая сила тянет содержание вверх вытаскивая снизу что-то новое.</p>
+    </div>
+    <div class="zetka-layer textblock-about-content-watcher">
+        <header class="big-title">
+            <h2>Король Апп не любит исчезать с экрана</h2>
+        </header>
+        <p>Там за краями очень темно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда очень удобно наблюдать, как неведомая сила тянет содержание вверх, вытаскивая снизу что-то новое.</p>
+    </div>
+    <style>
+        .scene-appking-is-content-lover {
+            
+        }
+        .textblock-about-content {
+            min-height: 120vh;
+            padding-top: 40vh;
+        }
+        .textblock-about-content-watcher {
+            padding-bottom: 20vh;
+        }
+    </style>
+    <script>
+        ChapterAction.push((o)=>{
+            let scene = document.querySelector('.textblock-about-content-watcher')
+            let character = document.querySelector('#ScreenAppking')
+            let doTheKingLikeToBeFixed = new Waypoint({
+                element: scene,
+                handler: function showCrownLegendStory (direction) {
+                    let classcode = "is-active animated bounceInLeft"
+                    let    addClass = direction == 'down' ? classcode : false
+                    let removeClass = direction == 'up'   ? classcode : false
+                    console.log(direction)
+                    app.mutate({ el: character, addClass, removeClass })
+                },
+                offset: '90%'
+            })
+        })
+    </script>
+</section>
+
 
 <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
 <!-- ======================================= END SCENES -->
 </article>
 
-<div style="height:200vh;"></div>
+<div style="height:200vh; background: pink;"></div>
 
 <div class="screen-characters">
     <div id="ScreenAppking" class="">
         <figure><img src="art/characters/appking-welcome.svg" alt="App King"></figure>
+        <style>
+            #ScreenAppking:not(.is-active) { display: none; }
+            #ScreenAppking {
+                position: fixed;
+                bottom:   1vh;
+                left:     1vw;
+            }
+            #ScreenAppking img {
+                width:  8em;
+                height: auto;
+            }
+        </style>
     </div>
 </div>
 
