Chapter Content Lover OK

--- a/appZapp/__demo/appking-story/line-2.html
+++ b/appZapp/__demo/appking-story/line-2.html
@@ -280,8 +280,8 @@
     <div class="zetka-layer textblock-about-this-world">
 
 
-        <p>Со времён легенды вулкан потух, а орёл улетел.</p>
-        <p>В новом мире, вместо лавы и пепла, из вулкана извергаются задачи.</p>
+        <p>Со времён легенды орёл улетел, а вулкан притих.</p>
+        <p>Вместо лавы и пепла, из вулкана в новом мире извергаются задачи.</p>
         <figure class="illustration">
             <img src="art/illustrations/sorgens-different-types.svg" alt="Different types of sorgens">
         </figure>
@@ -292,7 +292,7 @@
         </figure>
         <p>Решения разбросаны по всему миру и буквально валяются под ногами.</p>
         <blockquote class="highlighted-paragraph">
-        <p>Когда задача и подходящее решение находят друг-друга, они сливаются в едином танце и порождают результат. Только что произошёл такой случай: одна молодая задачка по имени «Объяснить слияние задач с решениями» затанцевала с красивым решением по имени «Придумать и описать пример». Этот параграф текста и его вертящаяся сестрёнка неподалёку — оба родились в чудесном танце.</p>
+        <p>Когда задача и подходящее решение находят друг-друга, они сливаются в едином танце и порождают результат. Буквально только что произошёл такой случай: одна молодая задачка по имени «Объяснить слияние задач с решениями» затанцевала с красивым решением по имени «Придумать и описать пример». Этот параграф текста и его вертящаяся сестрёнка неподалёку — оба родились в чудесном танце слияния.</p>
         </blockquote>
         <figure class="character-konigo-sorgen-soitie">
             <img src="art/illustrations/konigo-sorgen-soitie.svg" alt="Konigo-sorgen result">
@@ -301,8 +301,8 @@
         <div style="position:relative">
             <figure><img src="art/characters/bergamot-just-browse-here.svg" alt="Bergamot the Cat just browse"></figure>
         </div>
-        <p>Этот результат очень похож на кота. Настолько похож, что <em>скорее всего</em> он кот.</p>
-        <p>Взгляд кота настолько выразителен, что <em>скорее всего</em> он что-то выражает. <em>Скорее всего</em> у кота есть свои задачи ищущие своих решений. <em>Очень вероятно</em>, что кот что-то делает со своими задачами.</p>
+        <p>Этот результат очень похож на кота. Настолько похож, что, <em>скорее всего</em>, он кот.</p>
+        <p>Взгляд кота настолько выразителен, что, <em>скорее всего</em>, он что-то выражает. <em>Скорее всего</em>, у кота есть свои задачи в поисках своих решений. <em>Очень вероятно</em>, что кот как-то делает свои задачи.</p>
         <p>Чтобы понимать кота и других жителей этого мира, стоит посмотреть на мир изнутри:</p>
 
         <div class="zetka-layer has-v-slices has-sans-text matrix-code-layer">
@@ -317,7 +317,7 @@
                 <p class="span1">В бескрайнем пространстве живёт множество зелёных букашек-символов. Символы объединяются в слова и строки. Некоторые из них выстраиваются в обычный текст, который можно прочесть.</p>
                 <p>&lt;/P&gt;</p>
                 <p>&lt;P&gt;</p>
-                <p class="span1">А некоторые комбинации символов странные — их читает браузер. Кстати, этот кот опять здесь...</p>
+                <p class="span1">Другие комбинации символов странные — их читает браузер. Кстати, этот кот опять здесь...</p>
                 <p>&lt;/P&gt;</p>
             </div>
             <figure class="character-matrix-side">
@@ -330,17 +330,17 @@
                 </p>
                 <p>&lt;/FIGURE&gt;</p>
                 <p>&lt;P&gt;</p>
-                <p class="span1">Символы из этого мира читают все: и люди, и разные браузеры, и настоящие роботы. <em>Скорее всего</em> этот мир читают даже коты.</p>
+                <p class="span1">Зелёные символы из этого мира читают все: и люди, и разные браузеры, и настоящие роботы. <em>Скорее всего</em>, этот мир читают даже коты.</p>
                 <p>&lt;/P&gt;</p>
                 <p>&lt;P&gt;</p>
-                <p class="span1">Поэтому придумали общий язык, который каждый прочитает и поймёт. В языке перемешаны обычные слова, команды, описания, картинки и всё что угодно. Можно добавить даже видеотрансляцию с Юпитера в прямом эфире с космическими тюленями и сурдопереводом клинописью. Только где взять такую трансляцию.</p>
+                <p class="span1">Поэтому сообща придумали общий язык, который каждый прочитает и поймёт. В языке перемешаны обычные слова, команды, описания, картинки и всё что угодно. Можно добавить даже видеотрансляцию с Юпитера в прямом эфире с космическими тюленями и субтитрами клинописью. Только где взять такую трансляцию.</p>
                 <p>&lt;/P&gt;</p>
                 <p>&lt;P&gt;</p>
                 <p class="span1">Когда придумали язык, зелёные букашки-символы объединились в &lt;CODE&gt;<code>код</code>&lt;/CODE&gt;. Вместе с языком, придумали огромную кучу правил для разных задач — чем сложнее задача, тем сложнее правила. Порой, при взгляде на код, кажется что зелёные букашки посходили с ума. Взгляните сами:</p>
                 <p>&lt;/P&gt;</p>
                 <p>&lt;FIGURE CLASS="illustration"&gt;</p>
                 <p class="span1">&lt;FIGCAPTION&gt;</p>
-                <p class="span2">Пример сложной задачи: &lt;BR&gt;<br>Четверть одного кадра из той самой юпитерской трансляции</p>
+                <p class="span2">Пример сложной задачи: Четверть одного кадра из юпитерской трансляции</p>
                 <p class="span1">&lt;/FIGCAPTION&gt;</p>
             </div>
             <div class="layer matrix-code">
@@ -359,7 +359,7 @@
             </div>
             <div class="matrix-code">
                 <p>&lt;BLOCKQUOTE&gt;</p>
-                <p class="span1">— Хватит уже! — возмутился король Апп зелёным букашкам, — Что вы себе позволяете? Вы такие сложные, что уходите в другое место. Напишите в коде куда вы уходите.
+                <p class="span1">— Хватит уже! — возмутился король Апп зелёным букашкам, — Что вы себе позволяете? Вы такие сложные, что убирайтесь в другое место. Оставьте пометку в коде, куда именно уходите.
                 &lt;A HREF="jupiter-report-part0001.svg"&gt;
                 <a href="art/illustrations/jupiter-report-part0001.svg">Мы обязательно посмотрим.</a>
                 &lt;/A&gt; Досвидания!
@@ -465,7 +465,7 @@
             background-color: black;
             background-color: hsla(201, 65%, 6%, 1); /* Funny Like the Space */
             color: limegreen;
-            padding: 10vh 0;
+            padding: 20vh 0;
             margin-top:    20vh;
             margin-bottom: 40vh;
             /* is full shaped */
@@ -529,16 +529,32 @@
 <!-- Известный ценитель содержания -->
 <section class="el-scene zetka-layer scene-appking-is-content-lover">
     <div class="zetka-layer textblock-about-content">
-        <p>Король Апп известный ценитель содержания.</p>
-        <p>Содержание? Конечно знаю, дома мы назваем его <abbr title="термин: content">контент</abbr>, там он растёт под светом идей и даже дети умеют собирать контент.<br><br> Содержание — это то, что повествуется, излагается, изображается как-либо…</p>
-        <p>Король Апп не любит исчезать с экрана во время прокрутки. Там за краем экрана темно и скучно. Поэтому король из всех возможных позиций предпочитает <abbr title="position: fixed">фиксированную</abbr>, что даёт ему право оставаться в углу экрана.</p>
-        <p>Отсюда очень удобно наблюдать как неведомая сила тянет содержание вверх вытаскивая снизу что-то новое.</p>
+        <header class="big-title">
+            <h2>Король Апп — известный ценитель содержания</h2>
+        </header>
+        <p>Ах, побывать бы в королевских родных краях. Там содержание выращивают на горных склонах под светом ярких идей. Сеют добро и к осени пожинают плоды. Крохотные летающие феи — контенты — тщательно собирают содержание в корзинки и относят в редакцию. Где большие, как бегемоты, редакторы перерабатывают содержание объективным взглядом.</p>
+        <p>Переработанное содержание складывают для просушки на солнечном пляже. Под шелест волн суетятся крабы. Стайками бегают между кучками с содержанием и форматируют. Перекладывают содержание из кучки в кучку, готовые кучки подписывают перед загрузкой на сервер.</p>
+        <p>Огромные плавучие сервера, с серьёзными капитанами и с трубами густого чёрного дыма, подплывают к берегу чтобы загрузить содержание. Уже на серверах, сотни функций оптимизируют содержание и упаковывают к выдаче.</p>
+        <p>На экран свежее содержание подаётся распакованным и очищенным от ошибок. Когда видишь на экране интересное содержание, наполненное смыслом и лёгким ароматом элегантного дизайна, то каждый раз влюбляешься...</p>
+        <figure class="illustration-kingland-content">
+            <img src="art/illustrations/kingland-content-3.png" alt="Content from Kinglands">
+        </figure>
+        <p>Но это было давно, в сказочной королевской стране. В этом мире уже редко кто выращивает содержание. Чаще копируют или генерируют. А есть такие задачи, которые питаются только содержанием под названием <em>Lorem ipsum</em>.</p>
+        <p>Lorem ipsum вырастили только один раз. Засушили и стали использовать в каждом случае, когда внешний вид содержания важнее смысла. Привет красивые символы!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p>
+
+        <div class="el-dialog el-dialog--appking">
+            <p>— Немедленно прекратить! Отправляйтесь в шаблон, там самое подходящее место для вас.</p>
+        </div>
+
+        <p>Это король Апп, продолжает следить за порядком и ругается на непонятные символы. Интересно, как он замечает всё, что происходит?</p>
+
     </div>
     <div class="zetka-layer textblock-about-content-watcher">
         <header class="big-title">
             <h2>Король Апп не любит исчезать с экрана</h2>
         </header>
-        <p>Там за краями очень темно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда очень удобно наблюдать, как неведомая сила тянет содержание вверх, вытаскивая снизу что-то новое.</p>
+        <p>Там за краями очень темно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда удобно наблюдать, как неведомая сила тянет содержание вверх, вытаскивая снизу что-то новое.</p>
     </div>
     <style>
         .scene-appking-is-content-lover {
@@ -550,6 +566,11 @@
         }
         .textblock-about-content-watcher {
             padding-bottom: 20vh;
+        }
+        .illustration-kingland-content {
+            grid-column: menu-start / side-end;
+            text-align: center;
+            padding: 2em 0;
         }
     </style>
     <script>
@@ -564,7 +585,7 @@
                     let removeClass = direction == 'up'   ? classcode : false
                     app.mutate({ el: character, addClass, removeClass })
                 },
-                offset: '90%'
+                offset: '75%'
             })
         })
     </script>
