--- a/appZapp/__demo/appking-story/storytext.html
+++ b/appZapp/__demo/appking-story/storytext.html
@@ -30,6 +30,61 @@
 <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
 <!-- ========================================= START CONTENT -->
 
+# 2019.3.12
+
+Это король Апп.
+Версия Альфа Первый.
+
+Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.
+
+Корона слегка повреждена, об этом рассказывает легенда:
+
+* * *
+
+Описание мира
+
+Из красивой легенды вышел красивый символ — трезубая корона с оторванным зубцом.
+
+Символ сразу занялся делом — гордо стоит и запоминается. Такое поведение характерно для местной фауны — в этом мире все заняты выполнением задачи, а рождение показывается наглядно, каждый момент времени.
+
+Эти буквы стоят тут
+
+Король Апп стоит где-то рядом
+
+Надо сказать, что король Апп не любит исчезать с экрана. Там за краями ничего не видно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда удобно наблюдать, как снизу появляется что-то новое.
+
+[ЗАДАЧИ]
+
+Задачи разбегаются как тараканы, если бы только тараканы были разного размера. Бывают крохотные задачки — эти совсем не опасные, вот только назойливо летают вокруг и пищат: «Сделай меня, сейчас сделай...». А бывают огромные супер-сверх-важные задачи, которые могут внезапно свалиться сверху и раздавить своей тяжестью.
+
+Все задачи суетятся и разлетаются по миру в поисках решений.
+
+[РЕШЕНИЯ]
+
+Когда задача и подходящее решение находят друг-друга, они сливаются в едином танце и порождают результат.
+
+Буквально только что произошёл такой случай: одна молодая задачка по имени «Объяснить слияние задач с решениями» затанцевала с красивым решением по имени «Придумать и описать пример». Этот параграф текста и его вертящаяся сестрёнка неподалёку — оба родились в чудесном танце слияния.
+
+Вот ещё удачный пример, задачка была недурна собой и решение из достойного рода. А результат слияния:
+
+[КОТ]
+
+Этот результат очень похож на кота. Настолько похож, что, скорее всего, он кот.
+
+Взгляд кота настолько выразителен, что, скорее всего, он что-то выражает. Скорее всего, у кота есть свои задачи в поисках своих решений. Очень вероятно, что кот как-то делает свои задачи.
+
+И совершенно очевидно, что кот приглашает посмотреть на мир изнутри:
+
+* * *
+
+Изнутри мир выглядит примерно так.
+
+Часть можно понять как обычный текст. Необычные комбинации символов — это код — его читает кто-то другой... Кстати, этот кот опять здесь...
+
+Зелёные символы этого мира — местный планктон. Эти символы все читают: и люди; и разные браузеры; и настоящие роботы. Скорее всего, этот мир читают даже коты.
+
+Сообща придумали общий язык, который каждый прочитает и поймёт. В языке перемешаны обычные слова, команды, описания, картинки и всё что угодно. Можно добавить даже видеотрансляцию с Юпитера в прямом эфире с космическими тюленями и субтитрами клинописью. Только где взять такую трансляцию.
+
 
 <header>
     <h1>app story</h1>
