appking demo complete

--- a/appZapp/__demo/appking-story/index.html
+++ b/appZapp/__demo/appking-story/index.html
@@ -7,7 +7,7 @@
     <!-- ========================================= HEAD CONTENT -->
 
 
-    <title>Story</title>
+    <title>App King story demo</title>
 
 
     <!-- ========================================= APP MAIN -->
@@ -44,6 +44,9 @@
 
 
     <style>
+        .el-scene {
+            background-size: cover;
+        }
         .el-placeholder {
             grid-column: full;
             min-height: 100vh;
@@ -74,6 +77,7 @@
     <div class="textblock-welcome-appking">
 
         <h2>Это король Апп.</h2>
+        <p>Версия Альфа Первый</p>
         <p>Он настоящий король, потому что <nobr>¹) умеет управлять</nobr> <nobr>и ²) у него</nobr> есть корона.</p>
         <p>Корона слегка повреждена, об этом рассказывает легенда:</p>
 
@@ -193,6 +197,7 @@
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-position: 30% 40%;
+            background-size: cover;
         }
 
         .crown-legend-header {
@@ -528,7 +533,7 @@
         <p>Огромные плавучие сервера, с серьёзными капитанами и с трубами густого чёрного дыма, подплывают к берегу чтобы загрузить содержание. Уже на серверах, сотни функций оптимизируют содержание и упаковывают к выдаче.</p>
         <p>На экран свежее содержание подаётся распакованным и очищенным от ошибок. Когда видишь на экране интересное содержание, наполненное смыслом и лёгким ароматом элегантного дизайна, то каждый раз влюбляешься...</p>
         <figure class="illustration-kingland-content">
-            <img src="art/illustrations/kingland-content-3.png" alt="Content from Kinglands">
+            <img src="art/illustrations/kingland-content-story.png" alt="Content from Kinglands">
         </figure>
         <p>Но это было давно, в сказочной королевской стране. В этом мире уже редко кто выращивает содержание. Чаще копируют или генерируют. А есть такие задачи, которые питаются только содержанием под названием <em>Lorem ipsum</em>.</p>
         <p>Lorem ipsum вырастили только один раз. Засушили и стали использовать в каждом случае, когда внешний вид содержания важнее смысла. Привет красивые символы!</p>
