first ole commit

--- a/appZapp/__demo/appking-story/storytext.html
+++ b/appZapp/__demo/appking-story/storytext.html
@@ -32,14 +32,14 @@
 
 # 2019.3.12
 
-Это король Апп.
-Версия Альфа Первый.
+<h1>Это король Апп.</h1>
+<div class="subtitle">Версия Альфа Первый.</div>
 
-Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.
+<p>Он настоящий король, потому что ¹) умеет управлять и ²) у него есть корона.</p>
 
-Корона слегка повреждена, об этом рассказывает легенда:
+<p>Корона слегка повреждена, об этом рассказывает легенда:</p>
 
-* * *
+<div>* * *</div>
 
 Описание мира
 
