--- a/appZapp/__demo/appking-story/storytext.html
+++ b/appZapp/__demo/appking-story/storytext.html
@@ -41,29 +41,29 @@
 
 <div>* * *</div>
 
-Описание мира
+<h2>Описание мира</h2>
 
-Из красивой легенды вышел красивый символ — трезубая корона с оторванным зубцом.
+<p>Из красивой легенды вышел красивый символ — трезубая корона с оторванным зубцом.</p>
 
-Символ сразу занялся делом — гордо стоит и запоминается. Такое поведение характерно для местной фауны — в этом мире все заняты выполнением задачи, а рождение показывается наглядно, каждый момент времени.
+<p>Символ сразу занялся делом — гордо стоит и запоминается. Такое поведение характерно для местной фауны — в этом мире все заняты выполнением задачи, а рождение показывается наглядно, каждый момент времени.</p>
 
-Эти буквы стоят тут
+<p>Эти буквы стоят тут</p>
 
-Король Апп стоит где-то рядом
+<p>Король Апп стоит где-то рядом</p>
 
-Надо сказать, что король Апп не любит исчезать с экрана. Там за краями ничего не видно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда удобно наблюдать, как снизу появляется что-то новое.
+<p>Надо сказать, что король Апп не любит исчезать с экрана. Там за краями ничего не видно и невыносимо скучно. Куда приятнее занять фиксированное место в углу экрана. Отсюда удобно наблюдать, как снизу появляется что-то новое.</p>
 
-[ЗАДАЧИ]
+<p>[ЗАДАЧИ]</p>
 
-Задачи разбегаются как тараканы, если бы только тараканы были разного размера. Бывают крохотные задачки — эти совсем не опасные, вот только назойливо летают вокруг и пищат: «Сделай меня, сейчас сделай...». А бывают огромные супер-сверх-важные задачи, которые могут внезапно свалиться сверху и раздавить своей тяжестью.
+<p>Задачи разбегаются как тараканы, если бы только тараканы были разного размера. Бывают крохотные задачки — эти совсем не опасные, вот только назойливо летают вокруг и пищат: «Сделай меня, сейчас сделай...». А бывают огромные супер-сверх-важные задачи, которые могут внезапно свалиться сверху и раздавить своей тяжестью.</p>
 
-Все задачи суетятся и разлетаются по миру в поисках решений.
+<p>Все задачи суетятся и разлетаются по миру в поисках решений.</p>
 
-[РЕШЕНИЯ]
+<p>[РЕШЕНИЯ]</p>
 
-Когда задача и подходящее решение находят друг-друга, они сливаются в едином танце и порождают результат.
+<p>Когда задача и подходящее решение находят друг-друга, они сливаются в едином танце и порождают результат.</p>
 
-Буквально только что произошёл такой случай: одна молодая задачка по имени «Объяснить слияние задач с решениями» затанцевала с красивым решением по имени «Придумать и описать пример». Этот параграф текста и его вертящаяся сестрёнка неподалёку — оба родились в чудесном танце слияния.
+<p>Буквально только что произошёл такой случай: одна молодая задачка по имени «Объяснить слияние задач с решениями» затанцевала с красивым решением по имени «Придумать и описать пример». Этот параграф текста и его вертящаяся сестрёнка неподалёку — оба родились в чудесном танце слияния.</p>
 
 Вот ещё удачный пример, задачка была недурна собой и решение из достойного рода. А результат слияния:
 
