--- a/appZapp/__demo/appking-story/storytext.html
+++ b/appZapp/__demo/appking-story/storytext.html
@@ -30,6 +30,34 @@
 <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
 <!-- ========================================= START CONTENT -->
 
+# 2019.3.18
+
+— Как найти смысл жизни?
+
+Этот вопрос привлёк всеобщее внимание на короля. Ведь овечка с хитрыми глазами бросила вопрос, которую обсуждают тысячелетиями, и даже тысячи королей не смогли дать точного ответа. Король Апп увернулся от сложностей и сложности, пролетев мимо, шлёпнулись в лужу. Оставшуюся часть вопроса король поймал и спросил у овечки:
+
+— К чему вопрос? В чём твоя проблема?
+
+— Моя проблема в том, что не могу найти смысл жизни. И днём и ночью думаю о нём, не нахожу ответа. От уныния перестала делать по утрам зарядку и гулять с друзьями.
+
+— Всё очень просто, есть способ функционального мышления. Суть в том, что когда результат не известен, мы ведём себя словно знаем точный ответ. Ответ это — f(x) — некая капризная функция, которая обязательно даст точный ответ но не сейчас, а когда-нибудь потом.
+
+Вернись к друзьям и к обычной жизни. Наблюдай f(x), обсуждай f(x), думай об f(x), попробуй узнать можно ли разделить f(x) на несколько функций поменьше.
+
+Чтобы стать настоящим охотником на f(x), запоминай каждую ситуацию, где абстрактная запись не помогает. Такие моменты, — это возможность увидеть какую-либо маленькую особенность ещё неизвестного ответа. Список особенностей, когда их накопится достаточно много, со временем поможет прийти к решению. И тогда, можно будет смело заменить все f(x), что случились за время наблюдений.
+
+Собравшиеся одобрительно загудели и захлопали королевскому ответу. Стало так шумно, что никто не услышал недовольные выкрики хитрой овечки:
+
+— Это шарлатанство! Я требую справедливого ответа. Верните мне мой смысл жизни!
+
+Но другие овечки кучей облепили короля и оттеснили хитрую далеко назад.
+
+
+
+
+
+
+
 # 2019.3.12
 
 <h1>Это король Апп.</h1>
