--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -312,7 +312,11 @@
             <section c-dev3>
                 <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
                 <figure>
-                    <a href="http://fontawesome.io/icons/"><i>F Awesome</i></a>
+                    <a b href="https://material.io/tools/icons/?style=baseline"><i>Material Icons</i></a>
+                    <a href="https://simpleicons.org/"><i>Social</i></a>
+                </figure>
+                <figure>
+                    <a href="http://fontawesome.io/icons/"><i>Font Awesome</i></a>
                     <a href="https://fontawesome.com/v4.7.0/icons/" class="bold"><i>v4.7</i></a>
                 </figure>
                 <a href="https://next.json-generator.com/"><i>json generator</i></a>
