--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -57,6 +57,9 @@
         </section>
         <section c-prj2>
             <a b href="http://sheep.today/">sheep.today</a>
+            <figure>
+                <a href="https://drive.google.com/open?id=1AjEDPm_xCM5wqsQfS9cb2iRRsQkmQWTl">G-Drive Public</a>
+            </figure>
             <a b href="https://dribbble.com/zinovi-lipa">Dribble</a>
             <a b href="https://nora-the-sheep.tumblr.com/">Tumblr world pic</a>
             <a href="https://login.mailchimp.com/">mailchimp</a>
