business design sample

--- a/appZapp/__demo/demo-index.html
+++ b/appZapp/__demo/demo-index.html
@@ -43,6 +43,13 @@
 
         <hr>
 
+        <h2>Design samples</h2>
+        <ul class="zetka-as-overmain">
+            <li><a href="mirax/index.html">Mirax easy page</a></li>
+        </ul>
+
+        <hr>
+
         <h2>Projects</h2>
         <ul class="zetka-as-overmain">
            <li><a href="appking-story/storyline.html">appKing storyline</a></li>
